force-app/main/default/objects/ucinn_ascendv2__Clipboard_Setting__mdt/ucinn_ascendv2__Clipboard_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Clippify Setting</label>
    <pluralLabel>Clippify Settings</pluralLabel>
</CustomObject>