force-app/main/default/objects/ucinn_ascendv2__Clipboard_Setting__mdt/fields/ucinn_ascendv2__Actions__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Actions__c</fullName>
    <description>Defines actions that Clippify can apply to a particular SObject.</description>
    <inlineHelpText>A JSON string that defines Clipboard actions.

Each action has a required label, apiName, lookupFieldName, and formFields.
Each formField has a required name and optional defaultValue and readOnly config.
A list of recordTypeOptions is optional.</inlineHelpText>
    <label>Actions</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>