force-app/main/default/objects/ucinn_ascendv2__Clipboard_Setting__mdt/fields/ucinn_ascendv2__Search_Fields__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Search_Fields__c</fullName>
    <description>A JSON string that configures how this SObject should appear in Clippify&apos;s search UI.</description>
    <inlineHelpText>A JSON string that configures how this SObject&apos;s datatable should appear in Clipboard&apos;s search UI.

Has a required label and list of columns.
The label is used as the datatable&apos;s header.
Each column requires a label and fieldName.</inlineHelpText>
    <label>Search Fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>