force-app/main/default/objects/ucinn_ascendv2__Clipboard_Setting__mdt/fields/ucinn_ascendv2__SObject_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__SObject_Name__c</fullName>
    <description>The API Name for this target SObject. If no value is provided, then the Name of this Custom Metadata record will be used instead.

Ex.: ucinn_ascendv2__Session__c</description>
    <label>SObject API Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>